Fix z-index issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -219,7 +219,6 @@ button {
 
 .track-index-item {
   display: flex;
-  z-index: 2;
   flex-direction: column;
   justify-content: space-between;
   background: #000;
@@ -247,7 +246,6 @@ button {
 }
 
 .track-index-item-img-container {
-  z-index: 1;
   width: 100%;
   height: 50%;
   background: linear-gradient(180deg, transparent 60%, black 100%), asset-url('Dive.png');
